--- a/cadastro-pessoas/pom.xml
+++ b/cadastro-pessoas/pom.xml
@@ -7,20 +7,39 @@
   <version>1.0-SNAPSHOT</version>
   <name>cadastro-pessoas Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  <properties>
+    <java.version>17</java.version>
+  </properties>
 
   <dependencies>
     <!-- JSF -->
+    <!-- https://mvnrepository.com/artifact/jakarta.faces/jakarta.faces-api -->
     <dependency>
-      <groupId>javax.faces</groupId>
-      <artifactId>javax.faces-api</artifactId>
-      <version>2.3</version>
+      <groupId>jakarta.faces</groupId>
+      <artifactId>jakarta.faces-api</artifactId>
+      <version>4.0.1</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.glassfish.main.common/glassfish-api -->
+      <!-- https://mvnrepository.com/artifact/org.glassfish.main.common/glassfish-api -->
     <dependency>
       <groupId>org.glassfish.main.common</groupId>
       <artifactId>glassfish-api</artifactId>
       <version>7.0.11</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-core -->
+    <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.4.4.Final</version>
+    </dependency>
+
+
+    <!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
+    <dependency>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
+      <version>3.2.0-M2</version>
     </dependency>
 
 
@@ -45,6 +64,13 @@
       <artifactId>hibernate-core</artifactId>
       <version>6.4.4.Final</version>
       <type>pom</type>
+    </dependency>
+
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>8.2.0</version>
+      <scope>runtime</scope>
     </dependency>
 
 
